# Hclue

./: .gitignore  .replit  DATABASE_ACCESS_LINKS.md  Dockerfile  ENVIRONMENT_SETUP.md  GITHUB_PUSH_INSTRUCTIONS.md  HOSTING_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  IdeaFlow_Project_Specification.md  NGROK_SETUP_GUIDE.md  PORT_FORWARDING_GUIDE.md  QUICK-START.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  SETUP_INSTRUCTIONS.md  START_SERVERS_GUIDE.md  STRIPE_SETUP.md  SUPABASE_READY.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  VERSION_CONTROL_README.md  WEBSOCKET_MIGRATION_PLAN.md  api_server.py  app.py  configure-internet-access.py  database_admin.html  deploy.sh  deploy_setup.py  docker-compose.yml  docker-deploy.md  download_package.py  fix-config-simple.py  fix-frontend-config.py  internet-access-setup.md  local-server-setup.md  main.py  nginx-ideaflow.conf  ngrok.yml  package-lock.json  package.json  (+18 more)
attached_assets/: Pasted-Demo-of-the-idea-It-is-a-creative-personal-skill-activity-which-is-done-for-a-group-of-people--1745430482315.txt  content-1750361052305.md
ideaflow-react/: build-prod.sh  package-lock.json  package.json  vite.config.ts
ideaflow-react/src/: App.tsx  index.css
ideaflow-react/src/components/: Header.tsx  IdeaFlowChart.tsx  ProtectedRoute.tsx  StripeCheckout.tsx
ideaflow-react/src/contexts/: AuthContext.tsx  SubscriptionContext.tsx
ideaflow-react/src/pages/: FacilitatorDashboard.tsx  Home.tsx  Login.tsx  LoginInfo.tsx  ManageSubscription.tsx  ParticipantView.tsx  Pricing.tsx  (+1 more)
utils/: ai_processor.py  jwt_manager.py  postgres_db_manager.py
(+5 files in other folders)
